--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   rive: ^0.13.18
   font_awesome_flutter: ^10.8.0
   url_launcher: ^6.3.1
+  motion: ^2.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
