--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   url_launcher: ^6.3.1
   motion: ^2.0.1
+  enhanced_future_builder: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -106,3 +107,4 @@ flutter:
   assets:
     - assest/
     - assest/fonts/
+    - config/
