--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   url_launcher: ^6.3.1
   motion: ^2.0.1
   enhanced_future_builder: ^2.0.0
+  flutter_staggered_grid_view: ^0.7.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
